--- a/cluster/addons/fluentd-gcp/event-exporter.yaml
+++ b/cluster/addons/fluentd-gcp/event-exporter.yaml
@@ -55,8 +55,7 @@ spec:
         image: gcr.io/google-containers/prometheus-to-sd:v0.2.2
         command:
           - /monitor
-          - --stackdriver-prefix={{ prometheus_to_sd_prefix }}/addons
-          - --api-override={{ prometheus_to_sd_endpoint }}
+          - --stackdriver-prefix=container.googleapis.com/internal/addons
           - --source=event_exporter:http://localhost:80?whitelisted=stackdriver_sink_received_entry_count,stackdriver_sink_request_count,stackdriver_sink_successfully_sent_entry_count
           - --pod-id=$(POD_NAME)
           - --namespace-id=$(POD_NAMESPACE)
