--- a/cluster/images/etcd-empty-dir-cleanup/Makefile
+++ b/cluster/images/etcd-empty-dir-cleanup/Makefile
@@ -14,9 +14,9 @@
 
 .PHONY:	build push
 
-ETCD_VERSION = 3.1.10
-IMAGE = staging-k8s.gcr.io/etcd-empty-dir-cleanup
-TAG = 3.1.10.0
+ETCD_VERSION ?= 3.1.10
+IMAGE ?= staging-k8s.gcr.io/etcd-empty-dir-cleanup
+TAG ?= 3.1.10.0
 
 clean:
 	rm -rf etcdctl etcd-v$(ETCD_VERSION)-linux-amd64 etcd-v$(ETCD_VERSION)-linux-amd64.tar.gz
@@ -25,6 +25,8 @@ build: clean
 	curl -L -O https://github.com/coreos/etcd/releases/download/v$(ETCD_VERSION)/etcd-v$(ETCD_VERSION)-linux-amd64.tar.gz
 	tar xzvf etcd-v$(ETCD_VERSION)-linux-amd64.tar.gz
 	cp etcd-v$(ETCD_VERSION)-linux-amd64/etcdctl .
+
+container: build
 	docker build --pull -t $(IMAGE):$(TAG) .
 	rm -rf etcdctl etcd-v$(ETCD_VERSION)-linux-amd64 etcd-v$(ETCD_VERSION)-linux-amd64.tar.gz
 
