--- a/pkg/kubectl/cmd/set/BUILD
+++ b/pkg/kubectl/cmd/set/BUILD
@@ -9,6 +9,7 @@ go_library(
     srcs = [
         "helper.go",
         "set.go",
+        "set_entrypoint.go",
         "set_env.go",
         "set_image.go",
         "set_resources.go",
@@ -26,6 +27,7 @@ go_library(
         "//pkg/kubectl/cmd/util/env:go_default_library",
         "//pkg/kubectl/resource:go_default_library",
         "//pkg/kubectl/util/i18n:go_default_library",
+        "//vendor/github.com/google/shlex:go_default_library",
         "//vendor/github.com/spf13/cobra:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
