--- a/test/e2e/testing-manifests/ingress/http/dep.yaml
+++ b/test/e2e/testing-manifests/ingress/http/dep.yaml
@@ -1,9 +1,14 @@
 apiVersion: v1
-kind: ReplicationController
+kind: Deployment
 metadata:
   name: echoheaders
+  labels:
+    app: echoheaders
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: echoheaders
   template:
     metadata:
       labels:
