--- a/test/e2e/testing-manifests/ingress/pre-shared-cert/dep.yaml
+++ b/test/e2e/testing-manifests/ingress/pre-shared-cert/dep.yaml
@@ -1,9 +1,14 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: echoheaders-https
+  labels:
+    app: echoheaders-https
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      app: echoheaders-https
   template:
     metadata:
       labels:
