--- a/test/e2e/testing-manifests/ingress/static-ip/dep.yaml
+++ b/test/e2e/testing-manifests/ingress/static-ip/dep.yaml
@@ -1,9 +1,14 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: echoheaders-https
+  labels:
+    app: echoheaders-https
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      app: echoheaders-https
   template:
     metadata:
       labels:
@@ -11,6 +16,6 @@ spec:
     spec:
       containers:
       - name: echoheaders-https
-        image: gcr.io/google_containers/echoserver:1.6
+        image: k8s.gcr.io/echoserver:1.6
         ports:
         - containerPort: 8080
