bazel: build updated
Signed-off-by: balaji <rbalajis25@gmail.com>

--- a/staging/src/k8s.io/apiextensions-apiserver/test/integration/BUILD
+++ b/staging/src/k8s.io/apiextensions-apiserver/test/integration/BUILD
@@ -10,6 +10,7 @@ go_test(
     srcs = [
         "basic_test.go",
         "finalization_test.go",
+        "grace_period_test.go",
         "registration_test.go",
         "subresources_test.go",
         "validation_test.go",
