--- a/pkg/securitycontext/BUILD
+++ b/pkg/securitycontext/BUILD
@@ -31,6 +31,7 @@ go_test(
     deps = [
         "//pkg/apis/core:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/diff:go_default_library",
     ],
 )
