--- a/test/e2e/framework/BUILD
+++ b/test/e2e/framework/BUILD
@@ -60,6 +60,7 @@ go_library(
         "//pkg/controller/node:go_default_library",
         "//pkg/features:go_default_library",
         "//pkg/kubectl:go_default_library",
+        "//pkg/kubelet/apis:go_default_library",
         "//pkg/kubelet/apis/kubeletconfig:go_default_library",
         "//pkg/kubelet/apis/stats/v1alpha1:go_default_library",
         "//pkg/kubelet/dockershim/metrics:go_default_library",
